# CopyQ

./: .codespellrc  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .readthedocs.yaml  .travis.yml  .weblate  AGENTS.md  AUTHORS  Brewfile  CHANGES  CHANGES.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  Doxyfile  HACKING  INSTALL  README  README.md  RELEASE.md  TODO  TODO.txt  _config.yml  appveyor.yml  codecov.yml  common.pri  copyq.pro  copyq.pro.user.1.3  index.html  index.md  meson.build  params.json  pyproject.toml  version.cmake  version_header.cmake
plugins/: CMakeLists.txt  plugins.pro  plugins_common.pri
plugins/itemdata/: CMakeLists.txt  itemdata.cpp  itemdata.h  itemdata.pro  itemdatasettings.ui
plugins/itemencrypted/: CMakeLists.txt  itemencrypted.cpp  itemencrypted.h  itemencrypted.pro  itemencryptedsettings.ui
plugins/itemfakevim/: CMakeLists.txt  itemfakevim.cpp  itemfakevim.h  itemfakevim.pro  itemfakevim.qrc  itemfakevimsettings.ui
plugins/itemimage/: CMakeLists.txt  itemimage.cpp  itemimage.h  itemimage.pro  itemimagesettings.ui
plugins/itemnotes/: CMakeLists.txt  itemnotes.cpp  itemnotes.h  itemnotes.pro  itemnotessettings.ui
plugins/itempinned/: CMakeLists.txt  itempinned.cpp  itempinned.h  itempinned.pro  itempinnedsettings.ui
plugins/itemsync/: CMakeLists.txt  filewatcher.cpp  filewatcher.h  itemsync.cpp  itemsync.h  itemsync.pro  itemsyncsettings.ui
plugins/itemtags/: CMakeLists.txt  itemtags.cpp  itemtags.h  itemtags.pro  itemtagssettings.ui
plugins/itemtext/: CMakeLists.txt  itemtext.cpp  itemtext.h  itemtext.pro  itemtextsettings.ui
plugins/itemweb/: CMakeLists.txt  itemweb.cpp  itemweb.h  itemweb.pro
plugins/itemweb2/: CMakeLists.txt  itemweb.cpp  itemweb.h  itemweb.pro  itemwebsettings.ui
src/: CMakeLists.txt  ClipboardModel.h  DualModeI.cpp  aboutdialog.cpp  aboutdialog.h  aboutdialog.html  aboutdialog.ui  action.cpp  action.h  actiondialog.cpp  actiondialog.h  actiondialog.ui  app.cpp  app.h  arguments.cpp  arguments.h  audio.cmake  client_server.cpp  client_server.h  clipboardbrowser.cpp  clipboardbrowser.h  clipboardclient.cpp  clipboardclient.h  clipboarddialog.cpp  clipboarddialog.h  clipboarddialog.ui  clipboarditem.cpp  clipboarditem.h  clipboardmodel.cpp  clipboardmodel.h  clipboardmonitor.cpp  clipboardmonitor.h  clipboardserver.cpp  clipboardserver.h  commandwidget.cpp  commandwidget.h  commandwidget.ui  configurationmanager.cpp  configurationmanager.h  configurationmanager.ui  (+40 more)
src/app/: app.cpp  app.h  applicationexceptionhandler.cpp  applicationexceptionhandler.h  client.cpp  client.h  clipboardclient.cpp  clipboardclient.h  clipboardmanager.cpp  clipboardmanager.h  clipboardmonitor.cpp  clipboardmonitor.h  clipboardownermonitor.cpp  clipboardownermonitor.h  clipboardserver.cpp  clipboardserver.h  remoteprocess.cpp  remoteprocess.h  stacktrace.cpp  stacktrace.h
src/common/: action.cpp  action.h  actionhandlerenums.h  actionoutput.cpp  actionoutput.h  actiontablemodel.cpp  actiontablemodel.h  appconfig.cpp  appconfig.h  arguments.cpp  arguments.h  audioplayer.cpp  audioplayer.h  client_server.cpp  client_server.h  clientsocket.cpp  clientsocket.h  clipboarddataguard.cpp  clipboarddataguard.h  clipboardmode.h  command.cpp  command.h  commandstatus.h  commandstore.cpp  commandstore.h  commandtester.cpp  commandtester.h  common.cpp  common.h  compatibility.h  config.cpp  config.h  contenttype.h  diagnostics.cpp  diagnostics.h  display.cpp  display.h  encryption.cpp  encryption.h  globalshortcutcommands.cpp  (+40 more)
src/gui/: aboutdialog.cpp  aboutdialog.h  actiondialog.cpp  actiondialog.h  actionhandler.cpp  actionhandler.h  actionhandlerdialog.cpp  actionhandlerdialog.h  add_icons.h  addcommanddialog.cpp  addcommanddialog.h  clipboardbrowser.cpp  clipboardbrowser.h  clipboardbrowserplaceholder.cpp  clipboardbrowserplaceholder.h  clipboardbrowsershared.cpp  clipboardbrowsershared.h  clipboarddialog.cpp  clipboarddialog.h  clipboardspy.cpp  clipboardspy.h  commandaction.cpp  commandaction.h  commandcompleter.cpp  commandcompleter.h  commandcompleterdocumentation.h  commanddialog.cpp  commanddialog.h  commandedit.cpp  commandedit.h  commandhelpbutton.cpp  commandhelpbutton.h  commandsyntaxhighlighter.cpp  commandsyntaxhighlighter.h  commandwidget.cpp  commandwidget.h  configtabappearance.cpp  configtabappearance.h  configtabshortcuts.cpp  configtabshortcuts.h  (+87 more)
src/images/: icon.icns  logo.blend
src/include/: DualModeI.h  aboutdialog.h  action.h  actiondialog.h  app.h  arguments.h  client_server.h  clipboardbrowser.h  clipboardclient.h  clipboarddialog.h  clipboarditem.h  clipboardmodel.h  clipboardmonitor.h  clipboardserver.h  command.h  commandwidget.h  configurationmanager.h  contenttype.h  iconfactory.h  itemdelegate.h  itemeditor.h  itemfactory.h  itemimage.h  itemrichtext.h  itemtext.h  itemweb.h  itemwidget.h  mainwindow.h  option.h  pluginwidget.h  remoteprocess.h  scriptable.h  scriptableproxy.h  scriptableworker.h  shortcutdialog.h  tabbar.h  tabdialog.h  tabwidget.h  traymenu.h
src/item/: clipboarditem.cpp  clipboarditem.h  clipboardmodel.cpp  clipboardmodel.h  db.cpp  db.h  encrypt.cpp  encrypt.h  indexes.cpp  indexes.h  itemdelegate.cpp  itemdelegate.h  itemeditor.cpp  itemeditor.h  itemeditorwidget.cpp  itemeditorwidget.h  itemfactory.cpp  itemfactory.h  itemfilter.h  itemloaderscript.cpp  itemloaderscript.h  itemsaverwrapper.cpp  itemsaverwrapper.h  itemstore.cpp  itemstore.h  itemwidget.cpp  itemwidget.h  itemwidgetwrapper.cpp  itemwidgetwrapper.h  persistentdisplayitem.cpp  persistentdisplayitem.h  serialize.cpp  serialize.h
src/knotifications5/: copyq.notifyrc
src/miniaudio/: CMakeLists.txt  miniaudio_impl.cpp
src/platform/: platform.cmake  platform.pri  platformclipboard.cpp  platformclipboard.h  platformcommon.cpp  platformcommon.h  platformnativeinterface.h  platformsystemmutex.h  platformwindow.h  qxt.cmake
src/qtsingleapplication/: qtlocalpeer.cpp  qtlockedfile_win.cpp  qtsingleapplication.pri
src/scriptable/: README.md  commandhelp.cpp  commandhelp.h  dirclass.cpp  dirclass.h  (+37 more)
(+482 files in other folders)
